chore: Update max-width in CSS to 1250px and fix whitespace issue in commands.js

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 1000px;
+  max-width: 1250px;
   height: 500px;
   border-radius: 10px;
   box-shadow: 0 0 10px 7px rgb(255 255 255 / 10%);
@@ -173,7 +173,7 @@ pre {
     margin-top: 25px;
   }
 
-  p {
+  p{
     white-space: normal;
   }
 
